test/reject/bad_op.alg
op push Stack × Elem -> Stack;
